# telegram-gpt-bot

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/telegram_gpt_bot/: __init__.py  __main__.py  app.py  config.py  gpt.py  handlers.py
